View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030291 | Open CASCADE | OCCT:Visualization | public | 2018-10-24 19:11 | 2019-04-02 14:16 |
Reporter | aba | Assigned To | apn | ||
Priority | normal | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.3.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030291: Visualization - manipulator crashes when is attached with scaling mode disabled | ||||
Description | AIS_Manipulator crashes on Attach() method when input OptionsForAttach structure is set with EnableModes = Standard_True. | ||||
Steps To Reproduce | test v3d manipulator disable_parts | ||||
Tags | No tags attached. | ||||
Test case number | v3d manipulator disable_parts | ||||
|
Branch CR30291 has been created by aba. SHA-1: 4f27e95bbc6360afde839e327be6b17cc3d5ff0b Detailed log of new commits: Author: aba Date: Wed Oct 24 19:25:12 2018 +0300 0030291: Visualization - manipulator crashes when is attached with scaling mode disabled - in ComputeSelection() method checks are added to avoid taking triangulation of manipulator parts that are not computed |
|
Dear kgv, could you please review patch in the branch CR30291? |
|
Patch looks OK, please test. |
|
Combination - OCCT branch : CR30291 SHA - 4f27e95bbc6360afde839e327be6b17cc3d5ff0b Products branch : master SHA - 35af85def09c66ceeaf90b4e4fb8b54e68d5e98c was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences Test case: v3d manipulator disable_parts - OK CPU differences: Debian80-64: OCCT Total CPU difference: 17528.189999999853 / 17520.90999999988 [+0.04%] Products Total CPU difference: 7435.53000000006 / 7462.09000000004 [-0.36%] Windows-64-VC14: OCCT Total CPU difference: 17629.782210698457 / 17666.582846598394 [-0.21%] Products Total CPU difference: 8363.432011399984 / 8372.402068899986 [-0.11%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30291 has been deleted by inv. SHA-1: 4f27e95bbc6360afde839e327be6b17cc3d5ff0b |
occt: master f15c5f90 2018-10-24 16:25:12 Committer: apn Details Diff |
0030291: Visualization - manipulator crashes when is attached with scaling mode disabled - in ComputeSelection() method checks are added to avoid taking triangulation of manipulator parts that are not computed |
Affected Issues 0030291 |
|
mod - src/AIS/AIS_Manipulator.cxx | Diff File | ||
mod - src/AIS/AIS_Manipulator.hxx | Diff File | ||
add - tests/v3d/manipulator/disable_parts | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-10-24 19:11 | aba | New Issue | |
2018-10-24 19:11 | aba | Assigned To | => aba |
2018-10-24 19:32 | git | Note Added: 0080287 | |
2018-10-24 19:35 | aba | Note Added: 0080288 | |
2018-10-24 19:35 | aba | Assigned To | aba => kgv |
2018-10-24 19:35 | aba | Status | new => resolved |
2018-10-24 19:35 | aba | Steps to Reproduce Updated | |
2018-10-24 19:44 | kgv | Note Added: 0080289 | |
2018-10-24 19:44 | kgv | Assigned To | kgv => bugmaster |
2018-10-24 19:44 | kgv | Status | resolved => reviewed |
2018-10-25 16:18 | apn | Test case number | => v3d manipulator disable_parts |
2018-10-25 16:18 | apn | Status | reviewed => tested |
2018-10-25 16:18 | apn | Additional Information Updated | |
2018-10-25 16:18 | apn | Note Added: 0080323 | |
2018-10-25 16:18 | apn | Additional Information Updated | |
2018-10-28 13:20 | apn | Changeset attached | => occt master f15c5f90 |
2018-10-28 13:20 | apn | Assigned To | bugmaster => apn |
2018-10-28 13:20 | apn | Status | tested => verified |
2018-10-28 13:20 | apn | Resolution | open => fixed |
2018-10-28 16:13 | git | Note Added: 0080407 |