0030291: Visualization - manipulator crashes when is attached with scaling mode disabled

- in ComputeSelection() method checks are added to avoid taking triangulation of manipulator parts that are not computed